<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enterYourInformationToCreateAccount"
            android:layout_marginTop="@dimen/loginWelcomePadding"
            android:paddingStart="@dimen/loginDefaultStartEndPadding"
            android:paddingEnd="@dimen/loginDefaultStartEndPadding"
            android:textStyle="bold|italic"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/loginDefaultStartEndPadding"
            android:paddingEnd="@dimen/loginDefaultStartEndPadding"
            android:paddingTop="@dimen/loginDefaultPadding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignupFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourFirstname"
                android:inputType="text"
                android:maxLines="1"
                android:textDirection="locale"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/loginDefaultStartEndPadding"
            android:paddingEnd="@dimen/loginDefaultStartEndPadding"
            android:paddingTop="@dimen/loginDefaultPadding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignupLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourLastname"
                android:inputType="text"
                android:maxLines="1"
                android:textDirection="locale"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/loginDefaultStartEndPadding"
            android:paddingEnd="@dimen/loginDefaultStartEndPadding"
            android:paddingTop="@dimen/loginDefaultPadding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignupPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourPhoneNumber"
                android:inputType="phone"
                android:maxLines="1"
                android:textDirection="locale"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/loginDefaultStartEndPadding"
            android:paddingEnd="@dimen/loginDefaultStartEndPadding"
            android:paddingTop="@dimen/loginDefaultPadding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignupEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmailAddress"
                android:inputType="text"
                android:maxLines="1"
                android:textDirection="locale"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/loginDefaultStartEndPadding"
            android:paddingEnd="@dimen/loginDefaultStartEndPadding"
            android:paddingTop="@dimen/loginDefaultPadding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:textDirection="locale"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/loginDefaultStartEndPadding"
            android:layout_marginEnd="@dimen/loginDefaultStartEndPadding"
            android:layout_marginTop="@dimen/loginDefaultPadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/editTextDefaultSize"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinnerSignupGender"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/loginDefaultStartEndPadding"
            android:layout_marginEnd="@dimen/loginDefaultStartEndPadding"
            android:layout_marginTop="@dimen/loginDefaultPadding">

            <TextView
                android:id="@+id/tvPickBirthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectBirthDate"
                android:textSize="@dimen/editTextDefaultSize"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvSelectedBirthdate"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/editTextDefaultSize"/>

        </LinearLayout>


        <Button
            android:layout_marginTop="@dimen/loginDefaultStartEndPadding"
            android:layout_marginRight="@dimen/loginDefaultStartEndPadding"
            android:layout_marginLeft="@dimen/loginDefaultStartEndPadding"
            android:id="@+id/btnSignUpCreateAccount"
            style="@style/ButtonBorderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/buttonTextColors"/>


    </LinearLayout>



</ScrollView>