<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/mainDefaultPadding">

    <TextView
        android:id="@+id/tvCustomerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/customerNameSize"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/monthlyDashboard"
        android:paddingTop="@dimen/mainDefaultPadding"
        android:textAllCaps="true"
        android:textSize="@dimen/mainHeaderTitleSize"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerMainCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Spinner
            android:id="@+id/spinnerMainMonths"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:paddingStart="@dimen/mainDefaultPadding"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/totalEarned"
                android:textSize="@dimen/mainSubHeaderTitleSize"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvMainTotalEarned"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mainSubHeaderTitleSize"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/mainDefaultPadding">

            <TextView
                android:paddingStart="@dimen/mainDefaultPadding"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/totalSpent"
                android:textSize="@dimen/mainSubHeaderTitleSize"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvMainTotalSpent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mainSubHeaderTitleSize"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/latestTransactions"
        android:paddingTop="@dimen/mainDefaultPaddingTwice"
        android:textAllCaps="true"
        android:textSize="@dimen/mainHeaderTitleSize"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLatestTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>